--- a/inspector/index.html
+++ b/inspector/index.html
@@ -96,6 +96,7 @@ license that can be found in the LICENSE file.
       <script>
         Toolkit.register(this, {
           ready: function() {
+            this.webkitShadowRoot.applyAuthorStyles = true;
             this.$.inspector.element = this.$.canvas.querySelector('g-tabs');
           },
           paletteDragStart: function(event, detail) {
